# medInria-private-plugin-example

./: CMakeLists.txt  README.md  README.txt  fix_apple_links.sh.in  fix_apple_links_and_package.sh.in
ITKProcessExample/: CMakeLists.txt
cmake/: .AddPlugin.cmake.swp  .PluginDependencies.cmake.swp  .PluginPackaging.cmake.swp  .VersionNumber.cmake.swp  AddPlugin.cmake  ApplePackScript.cmake.in  PluginDependencies.cmake  PluginVersionNumber.cmake  PluginsConfig.cmake  pluginPack.cmake
doc/: CMakeLists.txt
